# ai-data-pipeline

./: .env.example  README.md  pyproject.toml
src/ai_pipeline/core/classifiers/: ai_classifier.py  base.py  hybrid_classifier.py  pattern_classifier.py
tests/: conftest.py
tests/unit/: test_classifiers.py
